# libserial

./: .clang-format  CMakeLists.txt  README.md  journal.md
examples/: serial_example.cc
include/serial/: serial.h
include/serial/impl/: unix.h  win.h
src/: serial.cc  serial_windows.cpp
src/impl/: unix.cc  win.cc
src/impl/list_ports/: list_ports_linux.cc  list_ports_osx.cc  list_ports_win.cc
test/: test_1.cpp  test_unix.cpp  test_win.cpp
